Fix side-nav drawer appearing behind block iframe

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -91,6 +91,7 @@ body {
     position: absolute;
     top: 3.2rem;
     right: 0;
+    z-index: 1;
   }
 
   .drawer {
